chore : including libs

--- a/minicourse-machine-learning/tutorial1.ipynb
+++ b/minicourse-machine-learning/tutorial1.ipynb
@@ -16,7 +16,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##including libs\n",
+    "\n",
+    "import numpy as np\n",
+    "import keras\n",
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from keras.callbacks import ModelCheckpoint\n",
+    "from tensorflow.keras.models import load_model"
+   ]
   }
  ],
  "metadata": {
