--- a/minicourse-machine-learning/tutorial1.ipynb
+++ b/minicourse-machine-learning/tutorial1.ipynb
@@ -27,6 +27,18 @@
     "from keras.callbacks import ModelCheckpoint\n",
     "from tensorflow.keras.models import load_model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## load and prepare the data base Fashion MNIST\n",
+    "\n",
+    "fashion_mnist = keras.datasets.fashion_mnist\n",
+    "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()"
+   ]
   }
  ],
  "metadata": {
