--- a/minicourse-machine-learning/tutorial1.ipynb
+++ b/minicourse-machine-learning/tutorial1.ipynb
@@ -39,6 +39,16 @@
     "fashion_mnist = keras.datasets.fashion_mnist\n",
     "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_images = train_images/ 255.0\n",
+    "test_images = test_images / 255.0"
+   ]
   }
  ],
  "metadata": {
