--- a/minicourse-machine-learning/tutorial1.ipynb
+++ b/minicourse-machine-learning/tutorial1.ipynb
@@ -49,6 +49,18 @@
     "train_images = train_images/ 255.0\n",
     "test_images = test_images / 255.0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_names=[\n",
+    "    'T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat',\n",
+    "    'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot'\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
