--- a/minicourse-machine-learning/tutorial1.ipynb
+++ b/minicourse-machine-learning/tutorial1.ipynb
@@ -61,6 +61,23 @@
     "    'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot'\n",
     "]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 10))\n",
+    "for i in range(25):\n",
+    "  plt.subplot(5,5,i+1)\n",
+    "  plt.xticks([])\n",
+    "  plt.yticks([])\n",
+    "  plt.grid(False)\n",
+    "  plt.imshow(train_images[i], cmap=plt.cm.binary)\n",
+    "  plt.xlabel(class_names[train_labels[i]])\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
