chore : define cnn model

--- a/minicourse-machine-learning/tutorial1.ipynb
+++ b/minicourse-machine-learning/tutorial1.ipynb
@@ -78,6 +78,23 @@
     "  plt.xlabel(class_names[train_labels[i]])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Definir o modelo CNN\n",
+    "\n",
+    "model = keras.Sequential([\n",
+    "    keras.layers.Conv2D(8, kernel_size=(3,3), activation='relu', input_shape=(28,28,1)),\n",
+    "    keras.layers.MaxPooling2D(pool_size=(2,2)),\n",
+    "    keras.layers.Flatten(),\n",
+    "    keras.layers.Dense(32,activation='relu'),\n",
+    "    keras.layers.Dense(10, activation='softmax')\n",
+    "])"
+   ]
   }
  ],
  "metadata": {
