--- a/minicourse-machine-learning/tutorial1.ipynb
+++ b/minicourse-machine-learning/tutorial1.ipynb
@@ -95,6 +95,18 @@
     "    keras.layers.Dense(10, activation='softmax')\n",
     "])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## compilar o modelo\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])"
+   ]
   }
  ],
  "metadata": {
