chore : train model

--- a/minicourse-machine-learning/tutorial1.ipynb
+++ b/minicourse-machine-learning/tutorial1.ipynb
@@ -107,6 +107,20 @@
     "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## treinar o modelo\n",
+    "\n",
+    "train_images = train_images[:,:,:,np.newaxis]\n",
+    "mc = ModelCheckpoint('model.h5', monitor='val_accuracy', mode='max', verbose=1,\n",
+    "                     save_best_only=True)\n",
+    "history = model.fit(train_images, train_labels, epochs=10, validation_split=0.2, callbacks=[mc])"
+   ]
   }
  ],
  "metadata": {
