chore : extract history

--- a/minicourse-machine-learning/tutorial1.ipynb
+++ b/minicourse-machine-learning/tutorial1.ipynb
@@ -121,6 +121,20 @@
     "                     save_best_only=True)\n",
     "history = model.fit(train_images, train_labels, epochs=10, validation_split=0.2, callbacks=[mc])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## extraindo historicos de metricas do treinamento\n",
+    "\n",
+    "train_loss = history.history['loss']#perda do trinamento\n",
+    "train_acc = history.history['accuracy']#acuracia de treinamento\n",
+    "valid_loss = history.history['val_loss']#perda de validação\n",
+    "valid_acc = history.history['val_accuracy']#acuracia da validação"
+   ]
   }
  ],
  "metadata": {
