chore : plot learning graphics

--- a/minicourse-machine-learning/tutorial1.ipynb
+++ b/minicourse-machine-learning/tutorial1.ipynb
@@ -135,6 +135,36 @@
     "valid_loss = history.history['val_loss']#perda de validação\n",
     "valid_acc = history.history['val_accuracy']#acuracia da validação"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# função para plotar as curvas de aprendizado\n",
+    "\n",
+    "def save_plots(train_acc, valid_acc, train_loss, valid_loss):\n",
+    "  plt.figure(figsize=(12,9))\n",
+    "  plt.plot(train_acc, color='green', linestyle='-', label='train accuracy')\n",
+    "  plt.plot(valid_acc, color='blue', linestyle='-', label='validation accuracy')\n",
+    "  plt.xlabel('epochs')\n",
+    "  plt.ylabel('accuracy')\n",
+    "  plt.legend()\n",
+    "  plt.savefig('accuracy.png')\n",
+    "  plt.show()\n",
+    "\n",
+    "  plt.figure(figsize=(12,9))\n",
+    "  plt.plot(train_loss, color='orange', linestyle='-', label='train loss')\n",
+    "  plt.plot(valid_loss, color='red', linestyle='-', label='validation loss')\n",
+    "  plt.xlabel('epochs')\n",
+    "  plt.ylabel('loss')\n",
+    "  plt.legend()\n",
+    "  plt.savefig('loss.png')\n",
+    "  plt.show()\n",
+    "\n",
+    "save_plots(train_acc, valid_acc, train_loss, valid_loss)"
+   ]
   }
  ],
  "metadata": {
