chore : rate model

--- a/minicourse-machine-learning/tutorial1.ipynb
+++ b/minicourse-machine-learning/tutorial1.ipynb
@@ -165,6 +165,20 @@
     "\n",
     "save_plots(train_acc, valid_acc, train_loss, valid_loss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# avaliar o modelo com os dados de teste\n",
+    "\n",
+    "model = load_model('model.h5')\n",
+    "test_images = test_images[:,:,:, np.newaxis]\n",
+    "test_loss, test_accuracy = model.evaluate(test_images, test_labels)\n",
+    "print(f\"acuracia nos dados de teste: {test_accuracy:.2f}\")"
+   ]
   }
  ],
  "metadata": {
