chore : define dataset and training dir

--- a/minicourse-machine-learning/tutorial2.ipynb
+++ b/minicourse-machine-learning/tutorial2.ipynb
@@ -31,6 +31,25 @@
     "\n",
     "!rm -rf cats_and_dogs_filtered.zip"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### definindo o dataset\n",
+    "\n",
+    "## define o tamanho desejado para as imagens\n",
+    "\n",
+    "IMAGE_SHAPE = (224, 244)\n",
+    "\n",
+    "#define os diretorios para os dados de treinamento e validação\n",
+    "\n",
+    "TRAINING_DATA_DIR = 'cats_and_dogs_filtered/train/'\n",
+    "VALID_DATA_DIR='cats_and_dogs_filtered/validation/'\n",
+    "class_names = ['gato', 'cachorro']"
+   ]
   }
  ],
  "metadata": {
