chore : create training sets and validating sets

--- a/minicourse-machine-learning/tutorial2.ipynb
+++ b/minicourse-machine-learning/tutorial2.ipynb
@@ -63,6 +63,27 @@
     "    rescale=1./255\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# criando conjuntos de dados de treinamento e validação a partir dos diretorios\n",
+    "\n",
+    "train_generator = datagen.flow_from_directory(\n",
+    "    TRAINING_DATA_DIR,\n",
+    "    shuffle=True, #embaralha os dados de treinamento\n",
+    "    target_size=IMAGE_SHAPE\n",
+    ")\n",
+    "\n",
+    "valid_generator = datagen.flow_from_directory(\n",
+    "    VALID_DATA_DIR,\n",
+    "    shuffle=False, #embaralha os dados de treinamento\n",
+    "    target_size=IMAGE_SHAPE#tamanho desejado das imagens\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
