chore : define model

--- a/minicourse-machine-learning/tutorial2.ipynb
+++ b/minicourse-machine-learning/tutorial2.ipynb
@@ -109,6 +109,22 @@
     "  plt.show\n",
     "plot_dataset(train_generator)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## montando o modelo\n",
+    "\n",
+    "# Tamanho do lote (batch size) O número de amostras de dados processadas em cada iteração de treinamento.\n",
+    "batch_size = 32\n",
+    "# Épocas (epochs) - O número de vezes que o modelo passará por todo o conjunto de treinamento durante o treinamento.\n",
+    "epochs = 10\n",
+    "# Taxa de aprendizado (learning rate) Um hiperparâmetro que controla o quanto o modelo está aprendendo durante o treinamento.\n",
+    "learning_rate= 0.0001"
+   ]
   }
  ],
  "metadata": {
