chore : define neural model

--- a/minicourse-machine-learning/tutorial2.ipynb
+++ b/minicourse-machine-learning/tutorial2.ipynb
@@ -125,6 +125,30 @@
     "# Taxa de aprendizado (learning rate) Um hiperparâmetro que controla o quanto o modelo está aprendendo durante o treinamento.\n",
     "learning_rate= 0.0001"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.src.layers.pooling.max_pooling1d import MaxPooling1D\n",
+    "#define o modelo da rede neural\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Conv2D(filters=8, kernel_size=(3,3), activation='relu',\n",
+    "                           input_shape=(224, 224, 3)),#camada de convolução inicial\n",
+    "    tf.keras.layers.MaxPooling2D(pool_size=(2,2), strides=2), #canada de max pooling\n",
+    "    tf.keras.layers.Conv2D(filters=16, kernel_size=(3,3), activation='relu'),\n",
+    "    tf.keras.layers.MaxPooling2D(pool_size=(2,2), strides=2),\n",
+    "    tf.keras.layers.Conv2D(filters=32, kernel_size=(3,3), activation='relu'),\n",
+    "    tf.keras.layers.MaxPooling2D(pool_size=(2,2), strides=2),\n",
+    "    tf.keras.layers.Flatten(), #camada de achatamento\n",
+    "    tf.keras.layers.Dense(64, activation='relu'), #camada densa\n",
+    "    tf.keras.layers.Dense(2, activation='softmax')#camada de saida\n",
+    "\n",
+    "])"
+   ]
   }
  ],
  "metadata": {
