--- a/minicourse-machine-learning/tutorial2.ipynb
+++ b/minicourse-machine-learning/tutorial2.ipynb
@@ -149,6 +149,23 @@
     "\n",
     "])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compile o modelo com otimizador, função de perda e metricas\n",
+    "\n",
+    "model.compile(\n",
+    "    optimizer = tf.keras.optimizers.Adam(learning_rate),\n",
+    "    loss=tf.keras.losses.CategoricalCrossentropy(),\n",
+    "    metrics=['accuracy']\n",
+    ")\n",
+    "\n",
+    "print(model.summary())"
+   ]
   }
  ],
  "metadata": {
