--- a/minicourse-machine-learning/tutorial2.ipynb
+++ b/minicourse-machine-learning/tutorial2.ipynb
@@ -166,6 +166,22 @@
     "\n",
     "print(model.summary())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# treinamento\n",
+    "\n",
+    "# Tamanho do lote (batch size) - O número de amostras de dados processadas em cada iteração de treinamento.\n",
+    "BATCH_SIZE = 32\n",
+    "# Épocas (epochs) O número de vezes que o modelo passará por todo o conjunto de treinamento durante o treinamento.\n",
+    "EPOCHS = 10\n",
+    "# Taxa de aprendizado (learning rate) - Um hiperparâmetro que controla o quanto o modelo está aprendendo durante o treinamento.\n",
+    "learning_rate= 0.0001\n"
+   ]
   }
  ],
  "metadata": {
