--- a/minicourse-machine-learning/tutorial2.ipynb
+++ b/minicourse-machine-learning/tutorial2.ipynb
@@ -182,6 +182,28 @@
     "# Taxa de aprendizado (learning rate) - Um hiperparâmetro que controla o quanto o modelo está aprendendo durante o treinamento.\n",
     "learning_rate= 0.0001\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definindo o histórico de treinamento para acompanhar o progresso do treinamento\n",
+    "mc = ModelCheckpoint('model.h5', monitor='val_accuracy', mode='max', verbose=1, save_best_only=True)\n",
+    "\n",
+    "history = model.fit(train_generator,\n",
+    "                    batch_size=batch_size,\n",
+    "                    epochs=epochs,\n",
+    "                    validation_data=valid_generator,\n",
+    "                    callbacks=[mc],\n",
+    "                    verbose=1)\n",
+    "\n",
+    "train_loss = history.history['loss']\n",
+    "train_acc = history.history['accuracy']\n",
+    "valid_loss = history.history['val_loss']\n",
+    "valid_acc = history.history['val_accuracy']\n"
+   ]
   }
  ],
  "metadata": {
