--- a/minicourse-machine-learning/tutorial2.ipynb
+++ b/minicourse-machine-learning/tutorial2.ipynb
@@ -204,6 +204,37 @@
     "valid_loss = history.history['val_loss']\n",
     "valid_acc = history.history['val_accuracy']\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função para plotar as curvas de aprendizado\n",
+    "def save_plots (train_acc, valid_acc, train_loss, valid_loss):\n",
+    "plt.figure(figsize=(12, 9))\n",
+    "plt.plot(train_acc, color='green', linestyle='-', label='train accuracy')\n",
+    "plt.plot(valid_acc, color='blue', linestyle='-',\n",
+    "label='validation accuracy')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.legend()\n",
+    "plt.savefig('accuracy.png')\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(12, 9))\n",
+    "\n",
+    "/\n",
+    "plt.plot(train_loss, color='orange', linestyle='-' label='train loss') plt.plot(valid_loss, color='red', linestyle='-', label='validation loss') plt.xlabel('Epochs')\n",
+    "143\n",
+    "plt.ylabel('Loss')\n",
+    "144\n",
+    "plt.legend ()\n",
+    "145\n",
+    "146\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
