chore : download dataset

--- a/minicourse-machine-learning/tutorial3.ipynb
+++ b/minicourse-machine-learning/tutorial3.ipynb
@@ -16,6 +16,19 @@
     "from keras.callbacks import ModelCheckpoint\n",
     "from tensorflow.keras.models import load_model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# baixando o data set\n",
+    "\n",
+    "!wget https://storage.googleapis.com/mledu-datasets/cats_and_dogs_filtered.zip\n",
+    "!unzip cats_and_dogs_filtered.zip\n",
+    "!rm -rf cats_and_dogs_filtered.zip"
+   ]
   }
  ],
  "metadata": {
