chore : define dataset and training dir

--- a/minicourse-machine-learning/tutorial3.ipynb
+++ b/minicourse-machine-learning/tutorial3.ipynb
@@ -29,6 +29,23 @@
     "!unzip cats_and_dogs_filtered.zip\n",
     "!rm -rf cats_and_dogs_filtered.zip"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#definindo o dataset\n",
+    "IMAGE_SHAPE = (224, 224)\n",
+    "image_shape = (224, 224, 3)\n",
+    "\n",
+    "##Define os diretórios para os dados de treinamento e validação\n",
+    "TRAINING_DATA_DIR = 'cats_and_dogs_filtered/train/'\n",
+    "VALID_DATA_DIR = 'cats_and_dogs_filtered/validation/'\n",
+    "\n",
+    "class_names = ['gato', 'cachorro']"
+   ]
   }
  ],
  "metadata": {
