chore : prepare objects pixels values

--- a/minicourse-machine-learning/tutorial3.ipynb
+++ b/minicourse-machine-learning/tutorial3.ipynb
@@ -46,6 +46,19 @@
     "\n",
     "class_names = ['gato', 'cachorro']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#preparando o objeto para redimensionar os valores dos pixels das imagens entre 0 e 1\n",
+    "\n",
+    "datagen = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "    rescale=1./255\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
