--- a/minicourse-machine-learning/tutorial3.ipynb
+++ b/minicourse-machine-learning/tutorial3.ipynb
@@ -59,6 +59,27 @@
     "    rescale=1./255\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#criando conjuntos de dados de treinamento e validação a partir dos diretorios\n",
+    "\n",
+    "train_generator = datagen.flow_from_directory(\n",
+    "    VALID_DATA_DIR,\n",
+    "    shuffle=True,\n",
+    "    target_size=IMAGE_SHAPE\n",
+    ")\n",
+    "\n",
+    "valid_generator = datagen.flow_from_directory(\n",
+    "    VALID_DATA_DIR,\n",
+    "    shuffle=False,\n",
+    "    target_size=IMAGE_SHAPE\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
