chore : ploting images from training sets

--- a/minicourse-machine-learning/tutorial3.ipynb
+++ b/minicourse-machine-learning/tutorial3.ipynb
@@ -80,6 +80,31 @@
     "    target_size=IMAGE_SHAPE\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plotando algumas imagens do conjunto de treinamento\n",
+    "\n",
+    "def plot_dataset(dataset, num_images=5):\n",
+    "  batch = dataset.next()\n",
+    "\n",
+    "  images = batch[0]\n",
+    "  labels = batch[1]\n",
+    "\n",
+    "  random_indices = np.random.choice(len(images), num_images, replace=False)\n",
+    "\n",
+    "  for i, idx in enumerate(random_indices):\n",
+    "    plt.subplot(1, num_images, i+1)\n",
+    "    plt.imshow(images[idx])\n",
+    "    plt.title(class_names[np.argmax(labels[idx])])\n",
+    "    plt.axis('off')\n",
+    "  plt.show()\n",
+    "plot_dataset(train_generator)"
+   ]
   }
  ],
  "metadata": {
