chore : define model

--- a/minicourse-machine-learning/tutorial3.ipynb
+++ b/minicourse-machine-learning/tutorial3.ipynb
@@ -105,6 +105,21 @@
     "  plt.show()\n",
     "plot_dataset(train_generator)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transfer learning\n",
+    "\n",
+    "model_transfer_learning = tf.keras.applications.MobileNetV2(input_shape =\n",
+    "                                                            image_shape, include_top = False,\n",
+    "                                                            weights = 'imagenet')\n",
+    "model_transfer_learning.trainable = False\n",
+    "model_transfer_learning.summary()"
+   ]
   }
  ],
  "metadata": {
