--- a/minicourse-machine-learning/tutorial3.ipynb
+++ b/minicourse-machine-learning/tutorial3.ipynb
@@ -120,6 +120,28 @@
     "model_transfer_learning.trainable = False\n",
     "model_transfer_learning.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#montando o modelo\n",
+    "\n",
+    "batch_size = 32\n",
+    "epochs = 10\n",
+    "learning_rate = 0.0001\n",
+    "\n",
+    "## define o modelo da rede neural\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    model_transfer_learning,\n",
+    "    tf.keras.layers.GlobalAveragePooling2D(),\n",
+    "    tf.keras.layers.Dropout(0.2),\n",
+    "    tf.keras.layers.Dense(2, activation='softmax'),\n",
+    "])"
+   ]
   }
  ],
  "metadata": {
