--- a/minicourse-machine-learning/tutorial3.ipynb
+++ b/minicourse-machine-learning/tutorial3.ipynb
@@ -142,6 +142,23 @@
     "    tf.keras.layers.Dense(2, activation='softmax'),\n",
     "])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#compule o modelo com otimizador, função de perda e metricas\n",
+    "\n",
+    "model.compile(\n",
+    "    optimizer=tf.keras.optimizers.Adam(learning_rate),\n",
+    "    loss=tf.keras.losses.CategoricalCrossentropy(),\n",
+    "    metrics=['accuracy']\n",
+    ")\n",
+    "\n",
+    "print(model.summary())"
+   ]
   }
  ],
  "metadata": {
