--- a/minicourse-machine-learning/tutorial3.ipynb
+++ b/minicourse-machine-learning/tutorial3.ipynb
@@ -159,6 +159,25 @@
     "\n",
     "print(model.summary())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# treinamento\n",
+    "\n",
+    "mc = ModelCheckpoint('model.h5', monitor='val-accuracy', mode='max', verbose=1, save_best_only=True)\n",
+    "\n",
+    "history = model.fit(train_generator, batch_size=batch_size, epochs=epochs, validation_data=valid_generator,\n",
+    "                    callbacks=[mc], verbose=1)\n",
+    "\n",
+    "train_loss = history.history['loss']\n",
+    "train_acc = history.history['accuracy']\n",
+    "valid_loss = history.history['val_loss']\n",
+    "valid_acc = history.history['val_accuracy']"
+   ]
   }
  ],
  "metadata": {
