--- a/minicourse-machine-learning/tutorial3.ipynb
+++ b/minicourse-machine-learning/tutorial3.ipynb
@@ -207,6 +207,31 @@
     "  plt.show()\n",
     "save_plots(train_acc, valid_acc, train_loss, valid_loss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#predição\n",
+    "\n",
+    "def predict (image_file):\n",
+    "  image= tf.keras.preprocessing.image.load_img (image_file, target_size = IMAGE_SHAPE)\n",
+    "  image = tf.keras.preprocessing.image.img_to_array(image)\n",
+    "plt.savefig('accuracy.png')\n",
+    "136\n",
+    "plt.show()\n",
+    "137\n",
+    "138\n",
+    "plt.plot(train_loss, color='orange', linestyle=\"\n",
+    "T\n",
+    "/\n",
+    "139\n",
+    "140\n",
+    "141\n",
+    "plt.ylabel('Loss')\n"
+   ]
   }
  ],
  "metadata": {
