chore : predict img

--- a/minicourse-machine-learning/tutorial3.ipynb
+++ b/minicourse-machine-learning/tutorial3.ipynb
@@ -232,6 +232,17 @@
     "141\n",
     "plt.ylabel('Loss')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load_model('model.h5')\n",
+    "\n",
+    "predict('img.extension')"
+   ]
   }
  ],
  "metadata": {
